--- a/FunctionalSampleProject/app/src/main/res/layout/activity_pitch_real_time_graph.xml
+++ b/FunctionalSampleProject/app/src/main/res/layout/activity_pitch_real_time_graph.xml
@@ -23,7 +23,7 @@
         android:layout_weight="0.2">
 
         <com.jjoe64.graphview.GraphView
-            android:id="@+id/resultGraph"
+            android:id="@+id/staticGraph"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="16dp" />
