--- a/CACP/app/src/main/res/layout/activity_practice_accent.xml
+++ b/CACP/app/src/main/res/layout/activity_practice_accent.xml
@@ -45,6 +45,13 @@
         android:layout_width="match_parent"
         android:layout_height="32dp">
 
+        <SeekBar
+            android:id="@+id/playSeekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:progress="0" />
     </FrameLayout>
 
     <LinearLayout
