--- a/CACP/app/src/main/res/layout/contents_item.xml
+++ b/CACP/app/src/main/res/layout/contents_item.xml
@@ -16,6 +16,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:paddingLeft="16dp"
+            android:singleLine="true"
             android:text="Title"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -33,6 +34,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:paddingLeft="16dp"
+            android:singleLine="true"
             android:text="description" />
 
         <TextView
