--- a/CACP/app/src/main/res/layout/activity_practice_accent.xml
+++ b/CACP/app/src/main/res/layout/activity_practice_accent.xml
@@ -43,7 +43,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp">
+        android:layout_height="wrap_content">
 
         <SeekBar
             android:id="@+id/playSeekBar"
@@ -56,8 +56,26 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="18dp"
-        android:orientation="horizontal"></LinearLayout>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/runningTimeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="16dp"
+            android:text="0:00" />
+
+        <TextView
+            android:id="@+id/durationTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:paddingRight="16dp"
+            android:text="0:00" />
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
