add capture function and change assets

--- a/CACP/app/src/main/res/layout/activity_practice_accent.xml
+++ b/CACP/app/src/main/res/layout/activity_practice_accent.xml
@@ -138,6 +138,15 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 app:srcCompat="@android:drawable/presence_audio_busy" />
+
+            <ImageButton
+                android:id="@+id/captureButton"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="16dp"
+                app:srcCompat="@android:drawable/ic_menu_gallery" />
+
         </FrameLayout>
     </LinearLayout>
 
