--- a/CACP/app/src/main/res/layout/activity_practice_accent.xml
+++ b/CACP/app/src/main/res/layout/activity_practice_accent.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -23,10 +24,13 @@
 
         <ImageButton
             android:id="@+id/closeButton"
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            app:srcCompat="@android:drawable/ic_delete" />
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="12dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/outline_close_black_24dp" />
     </LinearLayout>
 
     <FrameLayout
@@ -145,18 +149,28 @@
 
             <ImageButton
                 android:id="@+id/playButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:layout_gravity="right"
-                app:srcCompat="@android:drawable/ic_media_play" />
+                android:layout_marginTop="14dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="8dp"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/outline_play_circle_filled_white_black_24dp" />
 
             <ImageButton
                 android:id="@+id/pauseButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:layout_gravity="right"
+                android:layout_marginTop="14dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="8dp"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
                 android:visibility="invisible"
-                app:srcCompat="@android:drawable/ic_media_pause" />
+                app:srcCompat="@drawable/outline_pause_circle_filled_black_24dp" />
         </FrameLayout>
 
         <FrameLayout
@@ -166,17 +180,26 @@
 
             <ImageButton
                 android:id="@+id/recordButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                app:srcCompat="@android:drawable/presence_audio_busy" />
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="8dp"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/outline_mic_black_24dp" />
 
             <ImageButton
                 android:id="@+id/captureButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:layout_gravity="right"
-                android:layout_marginRight="16dp"
-                app:srcCompat="@android:drawable/ic_menu_gallery" />
+                android:layout_marginTop="14dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/outline_photo_camera_black_24dp" />
 
         </FrameLayout>
     </LinearLayout>
