--- a/CACP/app/src/main/res/layout/activity_main.xml
+++ b/CACP/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,17 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="56dp">
+
+        <Button
+            android:id="@+id/addFileButton"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="right"
+            android:background="@android:color/transparent"
+            android:text="+"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView"
@@ -25,16 +35,4 @@
         android:layout_weight="0.8"
         android:background="#e0e0e0" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-
-        <Button
-            android:id="@+id/addFileButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="0dp"
-            android:text="음성 등록" />
-    </FrameLayout>
 </LinearLayout>
