--- a/CACP/app/src/main/res/values/colors.xml
+++ b/CACP/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#aee6e0</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#eec66b</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorRed">#DE290F</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
