--- a/CACP/app/src/main/res/layout/activity_navigation.xml
+++ b/CACP/app/src/main/res/layout/activity_navigation.xml
@@ -20,6 +20,7 @@
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorRed"
         app:menu="@menu/navigation" />
 
 </LinearLayout>
