--- a/CACP/app/src/main/res/layout/contents_item.xml
+++ b/CACP/app/src/main/res/layout/contents_item.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/itemLayout"
     android:layout_width="match_parent"
     android:layout_height="80dp"
+    android:layout_marginTop="2dp"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <LinearLayout
