--- a/CACP/app/src/main/res/layout/history_item.xml
+++ b/CACP/app/src/main/res/layout/history_item.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="64dp"
+    android:layout_marginTop="2dp"
+    android:background="@android:color/white"
     android:orientation="horizontal">
 
     <ImageView
